configs/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "plex.home"
spec:
  type: ClusterIP
  ports:
    - port: 32400
      targetPort: 32400
      name: web
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: dlna-udp
    - port: 3005
      targetPort: 3005
      name: gdm1
    - port: 5353
      targetPort: 5353
      protocol: UDP
      name: gdm2
    - port: 8324
      targetPort: 8324
      name: gdm3
  selector:
    app: plex
