configs/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "plex.home"
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  tls:
    - hosts:
        - plex.home
      secretName: plex-tls
  rules:
    - host: plex.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-server-lb
                port:
                  number: 443
